# WhatsApp_Chat_Summary

./: .gitignore  README.md  main.py  pyproject.toml  stop_words.txt
