[tool.poetry]
name = "whatsapp-chat-summery"
version = "0.1.0"
description = ""
authors = ["Mushi0 <zhy_980401@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
paddlenlp = "^2.7.2"
paddlepaddle = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
